# cpp-challenges

./: README.md
basic/: runtests.py
basic/include/: rubiksCube.h
basic/test/: CMakeLists.txt  README.md  main.cpp  testproject.h
basic/test/tests/: evenOddTransformTests.cpp  paperRockScissorsTests.cpp  quadraticEquationTests.cpp  rubiksCubeTests.cpp  simpleTest.cpp
